show trends on website

--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -9,12 +9,16 @@
       font-family: Helvetica Neue;
     }
     th, td {
-      min-width: 7em;
+      min-width: 5em;
       text-align: left;
+      padding: 8px;
+    }
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
     }
     .name { font-weight: bold; }
     a { text-decoration: none; color: black; }
-    a:hover { text-decoration: underline; color: black; }
+    a:hover { text-decoration: underline; color: #007bff; }
   </style>
   </head>
   <body>
