add teasing v1 to nara 😈

--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -19,6 +19,141 @@
     .name { font-weight: bold; }
     a { text-decoration: none; color: black; }
     a:hover { text-decoration: underline; color: #007bff; }
+
+    /* Shooting Star Magic */
+    .shooting-star-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 9999;
+    }
+
+    .shooting-star {
+      position: absolute;
+      padding: 12px 20px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      border-radius: 25px;
+      font-size: 14px;
+      font-weight: 500;
+      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+      animation: shootingStar 4s ease-out forwards;
+      white-space: nowrap;
+    }
+
+    .shooting-star::before {
+      content: '✨';
+      margin-right: 8px;
+    }
+
+    .shooting-star::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: 100%;
+      width: 100px;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.8));
+      transform: translateY(-50%);
+      animation: trail 4s ease-out forwards;
+    }
+
+    .shooting-star .actor {
+      font-weight: bold;
+      color: #ffd700;
+    }
+
+    .shooting-star .target {
+      font-weight: bold;
+      color: #ff69b4;
+    }
+
+    .shooting-star .arrow {
+      margin: 0 6px;
+      opacity: 0.7;
+    }
+
+    @keyframes shootingStar {
+      0% {
+        opacity: 0;
+        transform: translateX(-100px) translateY(0) scale(0.8);
+      }
+      10% {
+        opacity: 1;
+        transform: translateX(0) translateY(0) scale(1);
+      }
+      70% {
+        opacity: 1;
+        transform: translateX(calc(100vw - 400px)) translateY(-50px) scale(1);
+      }
+      100% {
+        opacity: 0;
+        transform: translateX(calc(100vw + 100px)) translateY(-80px) scale(0.6);
+      }
+    }
+
+    @keyframes trail {
+      0% { width: 0; opacity: 0; }
+      10% { width: 50px; opacity: 0.8; }
+      70% { width: 150px; opacity: 0.5; }
+      100% { width: 200px; opacity: 0; }
+    }
+
+    /* Sparkle particles */
+    .sparkle {
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      pointer-events: none;
+      animation: sparkle 1.5s ease-out forwards;
+    }
+
+    .sparkle.gold { background: #ffd700; box-shadow: 0 0 6px #ffd700; }
+    .sparkle.pink { background: #ff69b4; box-shadow: 0 0 6px #ff69b4; }
+    .sparkle.white { background: #ffffff; box-shadow: 0 0 6px #ffffff; }
+    .sparkle.purple { background: #a855f7; box-shadow: 0 0 6px #a855f7; }
+
+    @keyframes sparkle {
+      0% {
+        transform: scale(0) rotate(0deg);
+        opacity: 0;
+      }
+      20% {
+        transform: scale(1.2) rotate(90deg);
+        opacity: 1;
+      }
+      100% {
+        transform: scale(0) rotate(180deg) translateY(-30px);
+        opacity: 0;
+      }
+    }
+
+    /* Star burst effect on appear */
+    .shooting-star.burst::before {
+      animation: burst 0.5s ease-out forwards;
+    }
+
+    @keyframes burst {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.5); }
+      100% { transform: scale(1); }
+    }
+
+    /* Glitter trail */
+    .glitter-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+    }
   </style>
   </head>
   <body>
