small tweaks to web-ui, use dayjs

--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>nara</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.10/dayjs.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.10/plugin/relativeTime.min.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/d3@7/dist/d3.min.js"></script>
     <style>
     body {
