--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -251,6 +251,23 @@
     .legend-dot.offline { background: #a0aec0; }
     .legend-dot.self { background: #ffd700; border: 2px solid #fff; }
 
+    .nara-avatar {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      border: 1px solid rgba(0, 0, 0, 0.08);
+      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.8), rgba(255,255,255,0.2));
+      box-shadow: 0 6px 12px rgba(0,0,0,0.08);
+      flex: 0 0 auto;
+    }
+
+    .nara-avatar-placeholder {
+      background: radial-gradient(circle at 40% 35%, rgba(255,255,255,0.75), rgba(220,220,220,0.45) 45%, rgba(200,200,200,0.25) 70%, rgba(180,180,180,0.08));
+      border: 1px solid rgba(120,120,120,0.15);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.06);
+      filter: blur(0.2px) saturate(0.6);
+    }
+
     /* Aura pulse animation for high-buzz naras */
     @keyframes aura-pulse {
       0% {
@@ -273,6 +290,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="nara-avatar.js" type="text/babel"></script>
   <script src="nara.js" type="text/babel"></script>
   </body>
 </html>
