add page to monitor resource usage of the network

--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -286,6 +286,12 @@
   </style>
   </head>
   <body>
+    <div style="display:flex; align-items:center; justify-content:space-between; padding:12px 16px; border-bottom:1px solid #eee; font-family: Helvetica Neue;">
+      <div style="font-weight:600;">nara</div>
+      <div style="display:flex; gap:14px; font-size:14px;">
+        <a href="/resources.html">resource usage</a>
+      </div>
+    </div>
     <div id="naras_container"></div>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
