--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -290,6 +290,7 @@
       <div style="font-weight:600;">nara</div>
       <div style="display:flex; gap:14px; font-size:14px;">
         <a href="/resources.html">resource usage</a>
+        <a href="/stash.html">stash</a>
       </div>
     </div>
     <div id="naras_container"></div>
