--- a/nara-web/public/stash.html
+++ b/nara-web/public/stash.html
@@ -10,9 +10,11 @@
     <style>
     body {
       font-family: Helvetica Neue;
-      margin: 20px;
+      margin: 0;
       background: #f5f5f5;
     }
+    a { text-decoration: none; color: black; }
+    a:hover { text-decoration: underline; color: #007bff; }
     .container {
       max-width: 1200px;
       margin: 0 auto;
@@ -153,7 +155,15 @@
     </style>
   </head>
   <body>
-    <div id="stash_container"></div>
+    <div style="display:flex; align-items:center; justify-content:space-between; padding:12px 16px; border-bottom:1px solid #eee; font-family: Helvetica Neue; background: white;">
+      <div style="font-weight:600;">nara</div>
+      <div style="display:flex; gap:14px; font-size:14px;">
+        <a href="/">home</a>
+        <a href="/resources.html">resource usage</a>
+        <a href="/stash.html">stash</a>
+      </div>
+    </div>
+    <div id="stash_container" style="margin-top: 20px;"></div>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
