--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -296,7 +296,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-    <script src="nara-avatar.js" type="text/babel"></script>
-  <script src="nara.js" type="text/babel"></script>
+    <script src="/nara-avatar.js" type="text/babel" data-presets="react"></script>
+    <script src="nara.js" type="text/babel" data-presets="react"></script>
   </body>
 </html>
