add inspector view 🕵

--- a/nara-web/public/index.html
+++ b/nara-web/public/index.html
@@ -289,6 +289,7 @@
     <div style="display:flex; align-items:center; justify-content:space-between; padding:12px 16px; border-bottom:1px solid #eee; font-family: Helvetica Neue;">
       <div style="font-weight:600;">nara</div>
       <div style="display:flex; gap:14px; font-size:14px;">
+        <a href="/inspector">inspector</a>
         <a href="/resources.html">resource usage</a>
         <a href="/stash.html">stash</a>
       </div>
