--- a/nara-web/public/resources.html
+++ b/nara-web/public/resources.html
@@ -217,7 +217,7 @@
 
       .service-list {
         display: grid;
-        gap: 6px;
+        gap: 4px;
       }
 
       .service-row {
@@ -226,20 +226,55 @@
         gap: 8px;
         font-family: "IBM Plex Mono", monospace;
         font-size: 11px;
+      }
+
+      .service-label {
+        min-width: 90px;
         color: var(--muted);
+      }
+
+      .service-count {
+        min-width: 45px;
+        text-align: right;
+        font-weight: 600;
+        color: var(--ink);
       }
 
       .bar {
         flex: 1;
-        height: 6px;
+        height: 5px;
         border-radius: 999px;
-        background: rgba(31, 28, 25, 0.08);
+        background: rgba(31, 28, 25, 0.06);
         overflow: hidden;
       }
 
       .bar span {
         display: block;
         height: 100%;
+        border-radius: 999px;
+      }
+
+      .bar-observation {
+        background: linear-gradient(90deg, #7c9cb5, #5a7fa0);
+      }
+
+      .bar-ping {
+        background: linear-gradient(90deg, #8bb68a, #6a9c6a);
+      }
+
+      .bar-checkpoint {
+        background: linear-gradient(90deg, #d4a373, #b8895b);
+      }
+
+      .bar-social {
+        background: linear-gradient(90deg, #d88b8b, #c66b6b);
+      }
+
+      .bar-hey-there {
+        background: linear-gradient(90deg, #c9a8d8, #a788b8);
+      }
+
+      .bar-critical {
         background: linear-gradient(90deg, #f2b46d, #d46c58);
       }
 
@@ -410,31 +445,37 @@
         tableBody.innerHTML = filtered.map(n => {
           const stats = n.HostStats || {};
           const services = n.event_store_by_service || {};
+          const total = safeNum(n.event_store_total);
+
           const eventTypes = [
-            { key: 'observation', label: 'observation' },
-            { key: 'ping', label: 'ping' },
-            { key: 'hey-there', label: 'hey-there' },
-            { key: 'chau', label: 'chau' },
-            { key: 'social', label: 'social' },
-            { key: 'critical', label: 'critical', source: 'critical' },
+            { key: 'observation', label: 'observation', barClass: 'bar-observation' },
+            { key: 'checkpoint', label: 'checkpoint', barClass: 'bar-checkpoint' },
+            { key: 'ping', label: 'ping', barClass: 'bar-ping' },
+            { key: 'social', label: 'social', barClass: 'bar-social' },
+            { key: 'hey-there', label: 'hey-there', barClass: 'bar-hey-there' },
+            { key: 'critical', label: 'critical ⚠️', source: 'critical', barClass: 'bar-critical' },
           ];
+
           const eventRows = eventTypes.map(type => {
             const count = type.source === 'critical'
               ? safeNum(n.event_store_critical)
               : safeNum(services[type.key]);
-            return { label: type.label, count };
-          });
+            const percentage = total > 0 ? (count / total) * 100 : 0;
+            return { label: type.label, count, percentage, barClass: type.barClass };
+          }).filter(row => row.count > 0); // Only show types with events
 
           const goroutines = safeNum(stats.NumGoroutines);
           const cpu = safeNum(stats.ProcCPUPercent);
           const memAlloc = safeNum(stats.MemAllocMB);
           const memSys = safeNum(stats.MemSysMB);
 
-          const serviceRows = eventRows.map(row => `
+          const serviceRows = eventRows.length > 0 ? eventRows.map(row => `
             <div class="service-row">
-              <span>${row.label}=${row.count}</span>
+              <span class="service-label">${row.label}</span>
+              <span class="service-count">${row.count}</span>
+              <div class="bar"><span class="${row.barClass}" style="width: ${row.percentage}%"></span></div>
             </div>
-          `).join('');
+          `).join('') : '<span class="muted">no events</span>';
 
           return `
             <tr>
@@ -442,7 +483,7 @@
                 <a href="/nara/${encodeURIComponent(n.Name)}" style="color: inherit; text-decoration: none;">
                   ${n.Name}
                 </a>
-                <span class="pill">${n.MemoryMode || 'memory'}</span>
+                <span class="pill">${n.MemoryMode || 'unknown'}</span>
               </td>
               <td class="mono ${statusClass(goroutines, 400, 800)}">${formatNumber(goroutines)}</td>
               <td class="mono ${statusClass(cpu, 60, 85)}">${formatPct(cpu)}</td>
@@ -451,11 +492,11 @@
               <td class="mono">${formatNumber(safeNum(stats.MemHeapMB), 'mb')} / ${formatNumber(safeNum(stats.MemStackMB), 'mb')}</td>
               <td class="mono">
                 <div class="stack">
-                  <span>${formatNumber(safeNum(n.event_store_total))}</span>
+                  <span>${formatNumber(total)}</span>
                   <span class="muted">crit ${formatNumber(safeNum(n.event_store_critical))}</span>
                 </div>
               </td>
-              <td>${serviceRows || '<span class="muted">no data</span>'}</td>
+              <td class="service-list">${serviceRows}</td>
             </tr>
           `;
         }).join('');
